--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "tornis": "^0.3.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
