--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
-    "vue": "^3.2.25",
-    "tornis": "^0.3.5"
+    "naive-ui": "^2.27.0",
+    "tornis": "^0.3.5",
+    "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
