--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^2.3.0",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
